@@ -1,71 +1,85 @@
 package businessmodel;
 
-import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.assertEquals;
 
 import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
 
-import businessmodel.order.StandardVehicleOrder;
 import org.junit.Before;
 import org.junit.Test;
 
-import businessmodel.category.VehicleModel;
-import businessmodel.category.VehicleOption;
-import businessmodel.category.VehicleOptionCategory;
-import businessmodel.category.ModelAFactory;
 import businessmodel.exceptions.NoClearanceException;
 import businessmodel.order.Order;
 import businessmodel.user.GarageHolder;
+import businessmodel.user.Manager;
+import businessmodel.util.TestStandardVehicleOrder;
 
 public class OrderManagerTest {
 
-	private VehicleManufacturingCompany cmc;
-	private OrderManager om;
-	private GarageHolder garageholder;
-	private Order order;
-	VehicleOption option;
-	VehicleOption option2;
-	private Catalog catalog;
-	private ArrayList<VehicleOptionCategory> categories;
+	private OrderManager ordermanager;
+	private ArrayList<String> names;
+	private GarageHolder holder;
 
 	@Before
 	public void setUp() throws Exception {
-		cmc = new VehicleManufacturingCompany();
-		om = cmc.getOrderManager();
-		garageholder = new GarageHolder("bouwe", "ceunen", "bouwe");
-
-		this.catalog = new Catalog();
-		this.categories = this.catalog.getAllCategories();
-
-		VehicleModel modelA = new ModelAFactory().createModel();
-		ArrayList<VehicleOption> chosen = new ArrayList<VehicleOption>();
-		for (VehicleOptionCategory category: this.categories) {
-			ArrayList<VehicleOption> options = modelA.getVehicleModelSpecification().getOptionsOfCategory(category);
-			if (options.size() > 0) {
-				chosen.add(options.get(0));
-			}
-		}
-		order = new StandardVehicleOrder(garageholder, chosen, modelA);
-		cmc.placeOrder(order);
+		this.ordermanager = new OrderManager();
+		generateVehicleModels();
+		addOrders();
 	}
 
 	@Test
-	public void test() {
-		try {
-			
-			assertTrue(om.getMainScheduler().getAssemblyLineSchedulers().get(0).getOrdersClone().contains(order));
-			Iterator<Order> iter = cmc.getPendingOrders(garageholder);
-			List<Order> copy = new ArrayList<Order>();
-			while (iter.hasNext())
-			    copy.add(iter.next());			
-			assertTrue(copy.contains(order));
+	public void test() throws IllegalArgumentException, NoClearanceException {
+		TestStandardVehicleOrder order = new TestStandardVehicleOrder(holder,"Car Model A");
+		ordermanager.placeOrderInFront(order.getOrder());
+		ordermanager.getPendingOrders().add(order.getOrder());
+		ordermanager.placeOrderInFront(order.getOrder());
+		assertEquals(order.getOrder(),ordermanager.getPendingOrders().getFirst());
+		
+		ordermanager.finishedOrder(order.getOrder());
+		assertEquals(order.getOrder(),ordermanager.getCompletedOrders().getFirst());
+		
+	}
 	
-			
-
-		} catch (IllegalArgumentException | NoClearanceException e) {
-			System.out.println(e.getMessage());
-		}
+	@Test(expected = IllegalArgumentException.class)
+	public void testPlaceOrder(){
+		ordermanager.placeOrder(null);
+	}
+	
+	@Test(expected = IllegalArgumentException.class)
+	public void testFinischedOrder(){
+		ordermanager.finishedOrder(null);
+	}
+	
+	@Test(expected = IllegalArgumentException.class)
+	public void testGetPendingOrdersUser1() throws IllegalArgumentException, NoClearanceException{
+		ordermanager.getPendingOrders(null);
+	}
+	
+	@Test(expected = NoClearanceException.class)
+	public void testGetPendingOrdersUser2() throws IllegalArgumentException, NoClearanceException{
+		ordermanager.getPendingOrders(new Manager("","",""));
 	}
 
+	private void generateVehicleModels() {
+		holder = new GarageHolder("Sander","","");
+		String name1 = "Car Model A";
+		String name2 = "Car Model B";
+		String name3 = "Car Model C";
+		String name4 = "Truck Model X";
+		String name5 = "Truck Model Y";
+		names = new ArrayList<String>();
+		names.add(name1);
+		names.add(name2);
+		names.add(name3);
+		names.add(name4);
+		names.add(name5);		
+	}
+
+	private void addOrders(){
+		ArrayList<Order> orders = new ArrayList<Order>();
+		for(int i =0 ;i < 20 ; i++){
+			TestStandardVehicleOrder ord = new TestStandardVehicleOrder(holder, names.get(i%4));
+			orders.add(ord.getOrder());
+			ordermanager.placeOrder(ord.getOrder());
+		}
+	}
 }
